# engineering-quickstarts-for-serverless-and-container-applications

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md
.circleci/: config.yml  no-op.yml
dotnet/: readme.md
dotnet/csharp-asp-sls/: .gitignore  README.md  dibs-asp-dotnet.sln
dotnet/csharp-asp-sls/asp-dotnet-mac/: LambdaEntryPoint.cs  LocalEntryPoint.cs  Readme.md  Startup.cs  asp-dotnet-mac.csproj  serverless.yml
dotnet/csharp-asp-sls/asp-dotnet-mac/Controllers/: DDbController.cs  ExampleController.cs
dotnet/csharp-asp-sls/asp-dotnet-mac/Models/: ExampleDataModel.cs
dotnet/csharp-asp-sls/asp-dotnet-win/: LambdaEntryPoint.cs  LocalEntryPoint.cs  Startup.cs  asp-dotnet-win.csproj  serverless.yml
dotnet/csharp-asp-sls/dibs-asp-dotnet-mac/: LambdaEntryPoint.cs  LocalEntryPoint.cs  Readme.md  Startup.cs  dibs-asp-dotnet-mac.csproj
dotnet/csharp-asp-sls/dibs-asp-dotnet-win/: LambdaEntryPoint.cs  LocalEntryPoint.cs  Readme.md  Startup.cs  aws-lambda-tools-defaults.json  dibs-asp-dotnet-win.csproj  serverless.yml
java/: readme.md
java/java-springboot-sls/: .gitignore  buildspec.yml  pom.xml  serverless.yml
java/java-springboot-sls/.circleci/: config.yml
python/: IDT_Readme.md  README.md
python/powertools-sls/: .gitignore  README.md  buildspec.yml  requirements.txt  serverless.yml
python/powertools-sls/.circleci/: config.yml
python/powertools-sls/src/: handler.py
python/powertools-sls/tests/: test_lambda_handler.py
rust/: readme.md
rust/rocket-lambda-sls/: .gitignore  Cargo.toml  README.md
rust/rocket-lambda-sls/src/: main.rs
(+19 files in other folders)
